--- a/resources/pos/src/locales/fr.json
+++ b/resources/pos/src/locales/fr.json
@@ -115,7 +115,7 @@
     "globally.input.change-image.tooltip": "Changer l'image",
     "globally.type.label": "Taper",
     "globally.back-btn": "Arri\u00e8re",
-    "globally.save-btn": "Sauver",
+    "globally.save-btn": "Sauvegarder",
     "globally.cancel-btn": "Annuler",
     "globally.edit-btn": "Modifier",
     "globally.submit-btn": "Soumettre",
@@ -509,7 +509,7 @@
     "print.title": "Imprimer",
     "update.title": "Mise \u00e0 jour",
     "preview.title": "Aper\u00e7u",
-    "toast.successful.title": "Couronn\u00e9 de succ\u00e8s",
+    "toast.successful.title": "R\u00e9ussie",
     "toast.error.title": "Quelque chose s'est mal pass\u00e9!",
     "unit.filter.all.label": "Tout",
     "unit.filter.piece.label": "Pi\u00e8ce",
@@ -539,7 +539,7 @@
     "sale.select.payment-type.placeholder": "Choisissez le type de paiement",
     "globally.payment.type.validate.label": "Veuillez s\u00e9lectionner le type de paiement",
     "product.quantity.alert.reports.title": "Alertes de quantit\u00e9 de produit",
-    "globally-saving-btn-label": "\u00c9conomie...",
+    "globally-saving-btn-label": "Chargement...",
     "payment-status.filter.partial.label": "Partiel",
     "dashboard.recentSales.total-product.label": "Produits totaux",
     "adjustments.title": "Ajustements",
@@ -646,7 +646,7 @@
     "settings.system-settings.select.date-format.label": "Format de donn\u00e9es",
     "quotation.title": "Devis",
     "quotation.detail.invoice.info": "Informations sur le devis",
-    "pepole.title": "Peuples",
+    "pepole.title": "Comptes",
     "converted.status.label": "Converti",
     "settings.system-settings.select.postcode.validate.length.label": "La longueur du code postal ne doit pas d\u00e9passer 8",
     "profit-loss.reports.title": "Perte de profit,",
@@ -713,6 +713,7 @@
     "hold-list-id.table.column.label": "ID",
     "hold-list-ref-id.table.column.label": "Ref.ID",
     "hold-list.details.title": "Liste des r\u00e9servations",
+    "confirm-modal.msg": "Êtes-vous sûr?",
     "hold-list.success.create.message": "Liste de conservation cr\u00e9\u00e9e avec succ\u00e8s",
     "hold-list.success.delete.message": "La liste bloqu\u00e9e a \u00e9t\u00e9 supprim\u00e9e avec succ\u00e8s",
     "report-all.warehouse.label": "Tout Entrep\u00f4t",
@@ -817,5 +818,5 @@
     "receipt-settigns.input.note.validate.label": "Veuillez saisir une note",
     "receipt-settings.show-barcode.label": "Afficher le code-barres sur le re\u00e7u",
     "receipt-settings.show-note.label": "Afficher la note",
-    "globally.submit-and-print-button": "Soumettre et imprimer"
+    "globally.submit-and-print-btn": "Soumettre et imprimer"
 }
