--- a/resources/pos/src/locales/fr.json
+++ b/resources/pos/src/locales/fr.json
@@ -492,7 +492,7 @@
     "bar.title": "Bar",
     "line.title": "Ligne",
     "filter.label": "Filtre",
-    "reports.title": "Signaler",
+    "reports.title": "Rapports",
     "warehouse.reports.title": "Rapport d'entrep\u00f4t",
     "sale.reports.title": "Rapport de vente",
     "stock.reports.title": "Rapport d'inventaire",
@@ -556,7 +556,7 @@
     "pos-sub-total.title": "SOUS-TOTAL",
     "pos-total-qty.title": "Quantit\u00e9 totale",
     "pos-total.title": "Total",
-    "pos-pay-now.btn": "Payez maintenant",
+    "pos-pay-now.btn": "Payez",
     "pos-globally.search.field.label": "Scanner\/rechercher un produit par nom de code",
     "pos-make-Payment.title": "Effectuer le paiement",
     "pos-received-amount.title": "Montant re\u00e7u",
@@ -713,7 +713,7 @@
     "hold-list-id.table.column.label": "ID",
     "hold-list-ref-id.table.column.label": "Ref.ID",
     "hold-list.details.title": "Liste des r\u00e9servations",
-    "confirm-modal.msg": "Êtes-vous sûr?",
+    "confirm-modal.msg": "\u00cates-vous s\u00fbr?",
     "hold-list.success.create.message": "Liste de conservation cr\u00e9\u00e9e avec succ\u00e8s",
     "hold-list.success.delete.message": "La liste bloqu\u00e9e a \u00e9t\u00e9 supprim\u00e9e avec succ\u00e8s",
     "report-all.warehouse.label": "Tout Entrep\u00f4t",
